# 4top-classification

./: .gitignore  README.md  custom_layers.py  data.py  dataset.py  loaders.py  models.py  predict.py  pyproject.toml  training.py  utils.py
models/: __init__.py  convolution.py  custom_layers.py  dense.py  models.py  permutation.py  recurrent.py
