[tool.poetry]
name = "mlippa"
version = "0.1.0"
description = ""
authors = ["Gijs Hendriksen <info@gijshendriksen.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
tensorflow = "^2.4.1"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.1"
tqdm = "^4.60.0"
tensorboard = "^2.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pylint = "^2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
